# inga-sdl

./: .gitignore  CMakeLists.txt  Makefile.mos  README.md
sources/: Game.c  Image.c  Image.h  SDL_includes.h  Script.c  Utils.c  main.c  version.h
